fix: compatability with new state className syntax

--- a/packages/bootstrap/scss/breadcrumb/_layout.scss
+++ b/packages/bootstrap/scss/breadcrumb/_layout.scss
@@ -9,7 +9,8 @@
         text-decoration: $link-decoration;
 
         &:hover,
-        &.k-state-hover {
+        &.k-state-hover ,
+        &.k-hover {
             text-decoration: $link-hover-decoration;
         }
     }
