--- a/packages/bootstrap/scss/breadcrumb/_theme.scss
+++ b/packages/bootstrap/scss/breadcrumb/_theme.scss
@@ -9,7 +9,8 @@
             color: $breadcrumb-active-color;
         }
 
-        .k-state-disabled {
+        .k-state-disabled ,
+        .k-disabled {
             opacity: 1;
             filter: none;
         }
