--- a/packages/default/scss/action-sheet/_theme.scss
+++ b/packages/default/scss/action-sheet/_theme.scss
@@ -43,7 +43,8 @@
 
         // Hover state
         &:hover,
-        &.k-state-hover {
+        &.k-state-hover ,
+        &.k-hover {
             @include fill(
                 $actionsheet-item-hover-text,
                 $actionsheet-item-hover-bg,
@@ -56,7 +57,8 @@
 
         // Focus state
         &:focus,
-        &.k-state-focus {
+        &.k-state-focus ,
+        &.k-focus {
             @include fill(
                 $actionsheet-item-focus-text,
                 $actionsheet-item-focus-bg,
@@ -69,7 +71,8 @@
 
         // Disabed state
         &:disabled,
-        &.k-state-disabled {
+        &.k-state-disabled ,
+        &.k-disabled {
             @include fill(
                 $actionsheet-item-disabled-text,
                 $actionsheet-item-disabled-bg,
