--- a/packages/default/scss/calendar/_layout.scss
+++ b/packages/default/scss/calendar/_layout.scss
@@ -386,7 +386,8 @@
         }
 
         // // styles are applied to the k-link element inside
-        // .k-state-selected {
+        // .k-state-selected ,
+        // .k-selected {
         //     color: inherit;
         //     background: transparent;
         //     border-color: transparent;
