--- a/packages/default/scss/colorpalette/_theme.scss
+++ b/packages/default/scss/colorpalette/_theme.scss
@@ -16,6 +16,7 @@
         }
 
         &.k-state-selected,
+        &.k-selected,
         &.k-state-selected:hover,
         &.k-selected,
         &.k-selected:hover {
