--- a/packages/default/scss/editor/_layout.scss
+++ b/packages/default/scss/editor/_layout.scss
@@ -42,7 +42,8 @@
                 pointer-events: auto;
             }
 
-            .k-editor-content.k-state-focused {
+            .k-editor-content.k-state-focused ,
+            .k-editor-content.k-focus {
                 outline-width: 1px;
                 outline-style: dashed;
             }
@@ -495,7 +496,8 @@
             display: block;
             margin: auto;
 
-            &.k-state-selected {
+            &.k-state-selected ,
+            &.k-selected {
                 color: inherit;
                 border-width: 0;
                 background-image: none;
