--- a/packages/default/scss/editor/_theme.scss
+++ b/packages/default/scss/editor/_theme.scss
@@ -10,7 +10,8 @@
 
     kendo-editor {
         &.k-readonly {
-            .k-editor-content.k-state-focused {
+            .k-editor-content.k-state-focused ,
+            .k-editor-content.k-focus {
                 outline-color: $body-text;
             }
         }
@@ -47,7 +48,8 @@
 
         // Hover & Actve state
         &:hover,
-        &.k-state-active {
+        &.k-state-active ,
+        &.k-active {
             border-color: $panel-border;
         }
     }
@@ -64,7 +66,8 @@
 
     // Insert table
     .k-ct-popup {
-        .k-state-selected {
+        .k-state-selected ,
+        .k-selected {
             @include fill( $selected-text, $selected-bg, $selected-border, none );
         }
     }
