--- a/packages/default/scss/filemanager/_theme.scss
+++ b/packages/default/scss/filemanager/_theme.scss
@@ -64,7 +64,8 @@
                 );
             }
 
-            &.k-state-selected .k-file-icon {
+            &.k-state-selected .k-file-icon ,
+            &.k-selected .k-file-icon {
                 @include fill(
                     inherit,
                     transparent,
