--- a/packages/default/scss/gantt/_layout.scss
+++ b/packages/default/scss/gantt/_layout.scss
@@ -82,7 +82,8 @@
                 }
             }
 
-            tr.k-state-selected > td:last-child {
+            tr.k-state-selected > td:last-child ,
+            tr.k-selected > td:last-child {
                 background: transparent;
             }
 
@@ -351,7 +352,8 @@
         border-color: currentColor;
         position: absolute;
     }
-    .k-gantt-line.k-state-selected {
+    .k-gantt-line.k-state-selected ,
+    .k-gantt-line.k-selected {
         z-index: 3;
     }
 
@@ -424,7 +426,8 @@
         transform: translate(-50%, -50%);
     }
     .k-task-dot:hover::before,
-    .k-task-dot.k-state-hover::before {
+    .k-task-dot.k-state-hover::before ,
+    .k-task-dot.k-hover::before {
         border-width: 1px;
     }
     .k-task-start { left: 0; }
