--- a/packages/default/scss/slider/_layout.scss
+++ b/packages/default/scss/slider/_layout.scss
@@ -44,7 +44,8 @@
         }
 
 
-        &.k-state-disabled {
+        &.k-state-disabled ,
+        &.k-disabled {
             .k-tick,
             .k-slider-track,
             .k-draghandle {
