--- a/packages/default/scss/timeselector/_layout.scss
+++ b/packages/default/scss/timeselector/_layout.scss
@@ -100,7 +100,8 @@
             display: block;
         }
 
-        &.k-state-focused {
+        &.k-state-focused ,
+        &.k-focus {
             &::before,
             &::after {
                 display: block;
