--- a/packages/default/scss/treelist/_layout.scss
+++ b/packages/default/scss/treelist/_layout.scss
@@ -25,7 +25,8 @@
         }
 
         .k-treelist-dragging,
-        .k-treelist-dragging .k-state-hover {
+        .k-treelist-dragging .k-state-hover ,
+        .k-treelist-dragging .k-hover {
             cursor: default;
         }
 
