--- a/packages/default/scss/upload/_theme.scss
+++ b/packages/default/scss/upload/_theme.scss
@@ -33,11 +33,13 @@
 
         .k-file {
 
-            &.k-state-focused {
+            &.k-state-focused ,
+            &.k-focus {
                 box-shadow: inset $upload-focused-shadow;
             }
 
-            .k-upload-action.k-state-focused {
+            .k-upload-action.k-state-focused ,
+            .k-upload-action.k-focus {
                 box-shadow: $upload-focused-shadow;
             }
 
@@ -129,6 +131,7 @@
 
         // Invalid,
         &.k-state-invalid,
+        &.k-invalid,
         &.ng-invalid.ng-touched,
         &.ng-invalid.ng-dirty {
             border-color: $invalid-border;
