--- a/packages/default/scss/window/_theme.scss
+++ b/packages/default/scss/window/_theme.scss
@@ -12,7 +12,8 @@
 
     .k-window {
         &:focus,
-        &.k-state-focused {
+        &.k-state-focused ,
+        &.k-focus {
             @include box-shadow( $window-focused-shadow );
         }
     }
