--- a/packages/material/scss/calendar/_theme.scss
+++ b/packages/material/scss/calendar/_theme.scss
@@ -4,14 +4,16 @@
 
     .k-calendar {
 
-        .k-state-focused .k-link {
+        .k-state-focused .k-link ,
+        .k-focus .k-link {
             @include fill(
                 $calendar-cell-hover-text,
                 $calendar-cell-hover-bg,
                 $calendar-cell-hover-border
             );
         }
-        .k-state-selected.k-state-focused .k-link {
+        .k-state-selected.k-state-focused .k-link ,
+        .k-selected.k-focused .k-link {
             @include fill(
                 $calendar-cell-selected-text,
                 try-tint($calendar-cell-selected-bg),
