--- a/packages/material/scss/grid/_theme.scss
+++ b/packages/material/scss/grid/_theme.scss
@@ -7,11 +7,14 @@
 
         // Selected state
         td.k-state-selected,
-        tr.k-state-selected {
+        td.k-selected,
+        tr.k-state-selected ,
+        tr.k-selected {
             color: $grid-selected-text;
             background-color: $grid-selected-bg;
         }
-        tr.k-state-selected > td {
+        tr.k-state-selected > td ,
+        tr.k-selected > td {
             color: inherit;
             background-color: transparent;
         }
@@ -20,8 +23,11 @@
         table {
             tr:not(.k-detail-row):hover,
             tr:not(.k-detail-row).k-state-hover,
+            tr:not(.k-detail-row).k-hover,
             td.k-state-focused,
+            td.k-focus,
             th.k-state-focused,
+            th.k-focus,
             th:focus,
             .k-master-row > td:focus,
             .k-grouping-row > td:focus,
@@ -32,7 +38,8 @@
             }
 
             tr:hover,
-            tr.k-state-hover {
+            tr.k-state-hover ,
+            tr.k-hover {
                 .k-grid-header-sticky,
                 .k-grid-footer-sticky {
                     color: inherit;
@@ -41,7 +48,9 @@
             }
 
             td.k-state-focused,
+            td.k-focus,
             th.k-state-focused,
+            th.k-focus,
             th:focus,
             .k-master-row > td:focus,
             .k-grouping-row > td:focus,
@@ -57,7 +66,8 @@
 
         }
         .k-grid-pager:focus,
-        .k-grid-pager.k-state-focused {
+        .k-grid-pager.k-state-focused ,
+        .k-grid-pager.k-focus {
             color: inherit;
         }
 
@@ -110,7 +120,8 @@
 
             .k-group-footer {
                 &:hover td,
-                &.k-state-hover td {
+                &.k-state-hover td ,
+                &.k-hover td {
                     color: inherit;
                     @include fill( $bg: $grid-sticky-footer-hovered-bg );
                 }
@@ -160,13 +171,15 @@
 
             &:focus,
             &.k-state-focus,
+            &.k-focus,
             &.k-state-border-down {
                 color: $grid-text;
                 background-color: $grid-filter-button-focus;
                 box-shadow: none;
             }
 
-            &.k-state-active {
+            &.k-state-active ,
+            &.k-active {
                 color: $primary-contrast;
                 background-color: $primary;
             }
@@ -206,7 +219,8 @@
         }
 
         &:hover td,
-        &.k-state-hover td {
+        &.k-state-hover td ,
+        &.k-hover td {
             @include fill( $bg: $grid-sticky-footer-hovered-bg );
         }
     }
@@ -238,7 +252,8 @@
     }
 
     .k-columnmenu-item {
-        &.k-state-selected {
+        &.k-state-selected ,
+        &.k-selected {
             @include fill(
                 $kendo-list-item-selected-text,
                 $kendo-list-item-selected-bg
@@ -246,7 +261,8 @@
         }
     }
     .k-columnmenu-item:focus,
-    .k-columnmenu-item.k-state-focus {
+    .k-columnmenu-item.k-state-focus ,
+    .k-columnmenu-item.k-focus {
         background: $kendo-list-item-hover-bg;
     }
 
@@ -254,7 +270,8 @@
 
         .k-item {
             // Selected state
-            &.k-state-selected {
+            &.k-state-selected ,
+            &.k-selected {
                 background: $kendo-list-item-hover-bg;
             }
         }
