--- a/packages/material/scss/listview/_theme.scss
+++ b/packages/material/scss/listview/_theme.scss
@@ -8,7 +8,8 @@
 
     // Listview content
     .k-listview-content {}
-    .k-listview-content > .k-state-selected.k-state-focused {
+    .k-listview-content > .k-state-selected.k-state-focused ,
+    .k-listview-content > .k-selected.k-focused {
         background-color: rgba( contrast-wcag( $listview-bg ), .12 );
     }
 
