--- a/packages/material/scss/pivotgrid/_theme.scss
+++ b/packages/material/scss/pivotgrid/_theme.scss
@@ -4,6 +4,7 @@
 
     // Hover and Focus state have the same bg color
     .k-pivotgrid-cell.k-state-focus,
+    .k-pivotgrid-cell.k-focus,
     .k-pivotgrid-cell:focus,
     .k-master-row > .k-pivotgrid-cell:focus,
     .k-grouping-row > .k-pivotgrid-cell:focus,
