--- a/packages/material/scss/slider/_theme.scss
+++ b/packages/material/scss/slider/_theme.scss
@@ -22,7 +22,8 @@
             }
         }
 
-        &.k-state-disabled {
+        &.k-state-disabled ,
+        &.k-disabled {
             opacity: 1;
 
             .k-slider-track,
