--- a/packages/default/scss/colorpalette/_layout.scss
+++ b/packages/default/scss/colorpalette/_layout.scss
@@ -46,8 +46,11 @@
 
         &:focus,
         &.k-state-focus,
+        &.k-focus,
         &.k-state-selected,
-        &.k-state-selected:hover {
+        &.k-selected,
+        &.k-state-selected:hover ,
+        &.k-selected:hover {
             position: relative;
             z-index: 100;
         }
