--- a/packages/default/scss/core/mixins/_input-ripple.scss
+++ b/packages/default/scss/core/mixins/_input-ripple.scss
@@ -17,13 +17,15 @@
         background-color: $primary;
     }
 
-    &.k-state-focused::after {
+    &.k-state-focused::after ,
+    &.k-focus::after {
         opacity: 1;
         transform: scaleX(1);
     }
 
 
-    &.k-state-invalid::after {
+    &.k-state-invalid::after ,
+    &.k-invalid::after {
         background-color: $error;
         transition: none;
     }
