--- a/packages/default/scss/expansion-panel/_theme.scss
+++ b/packages/default/scss/expansion-panel/_theme.scss
@@ -7,7 +7,8 @@
             $expander-border
         );
 
-        &.k-state-focus {
+        &.k-state-focus ,
+        &.k-focus {
             box-shadow: $expander-focus-shadow;
         }
     }
@@ -21,12 +22,14 @@
         outline: none;
 
         &:hover,
-        &.k-state-hover {
+        &.k-state-hover ,
+        &.k-hover {
             background-color: $expander-header-hover-bg;
         }
 
         // Should be removed
-        &.k-state-focused {
+        &.k-state-focused ,
+        &.k-focus {
             background-color: $expander-header-focused-bg;
             box-shadow: $expander-header-focused-shadow;
         }
