--- a/packages/default/scss/wizard/_layout.scss
+++ b/packages/default/scss/wizard/_layout.scss
@@ -31,7 +31,8 @@
             justify-content: space-between;
 
             &:focus,
-            &.k-state-focused {
+            &.k-state-focused ,
+            &.k-focus {
                 outline-width: 1px;
                 outline-style: dotted;
                 outline-offset: -1px;
