--- a/packages/material/scss/drawer/_theme.scss
+++ b/packages/material/scss/drawer/_theme.scss
@@ -2,10 +2,12 @@
 
 @include exports( "drawer/theme/material" ) {
     .k-drawer-item {
-        &.k-state-selected {
+        &.k-state-selected ,
+        &.k-selected {
 
             &:focus,
-            &.k-state-focused {
+            &.k-state-focused ,
+            &.k-focus {
                 background-color: $drawer-focused-bg;
                 box-shadow: $drawer-focused-shadow;
             }
