--- a/packages/material/scss/floating-label/_theme.scss
+++ b/packages/material/scss/floating-label/_theme.scss
@@ -10,6 +10,7 @@
         .k-invalid + .k-label,
         &.k-state-invalid + .k-label,
         .k-state-invalid + .k-label,
+        .k-invalid + .k-label,
         .ng-invalid.ng-touched + .k-label,
         .ng-invalid.ng-dirty + .k-label {
             @include fill( $color: $error );
