--- a/packages/material/scss/progressbar/_theme.scss
+++ b/packages/material/scss/progressbar/_theme.scss
@@ -58,7 +58,8 @@
             $progressbar-gradient
         );
 
-        .k-state-selected {
+        .k-state-selected ,
+        .k-selected {
             @include fill(
                 $progressbar-fill-text,
                 $progressbar-fill-bg,
