--- a/packages/material/scss/scheduler/_layout.scss
+++ b/packages/material/scss/scheduler/_layout.scss
@@ -37,7 +37,8 @@
     kendo-scheduler .k-event,
     .k-event {
 
-        &.k-state-selected {
+        &.k-state-selected ,
+        &.k-selected {
             &::before {
                 display: block;
             }
